DTR-12 add hint text to paymeny amount

--- a/app/views/PaymentAmountView.scala.html
+++ b/app/views/PaymentAmountView.scala.html
@@ -42,6 +42,7 @@
             )
             .withPrefix(PrefixOrSuffix(content = "£"))
             .withWidth(Fixed10)
+            .withHint(HintViewModel(HtmlContent(messages("paymentAmount.hint"))))
         )
 
         @govukButton(
