DTR-124: Fix all back links

--- a/app/views/BankDetailsCheckYourAnswerView.scala.html
+++ b/app/views/BankDetailsCheckYourAnswerView.scala.html
@@ -28,9 +28,9 @@
     linkWithHiddenText: LinkWithHiddenText
 )
 
-@(form: Form[_], mode: Mode, list: SummaryList)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, list: SummaryList, call: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("bankDetailsCheckYourAnswer.title"))) {
+@layout(pageTitle = title(form, messages("bankDetailsCheckYourAnswer.title")), backLink = Some(call.url)) {
     @formHelper(action = routes.BankDetailsCheckYourAnswerController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
