--- a/app/views/PaymentAmountView.scala.html
+++ b/app/views/PaymentAmountView.scala.html
@@ -24,9 +24,9 @@
     govukButton: GovukButton,
 )
 
-@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, call: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("paymentAmount.title"))) {
+@layout(pageTitle = title(form, messages("paymentAmount.title")), backLink = Some(call.url)) {
 
     @formHelper(action = routes.PaymentAmountController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
