--- a/app/views/PlanStartDateView.scala.html
+++ b/app/views/PlanStartDateView.scala.html
@@ -22,9 +22,9 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode, dateTimeShort: String, dateTimeNumeric: String, source: DirectDebitSource)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, dateTimeShort: String, dateTimeNumeric: String, source: DirectDebitSource, call: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("planStartDate.title"))) {
+@layout(pageTitle = title(form, messages("planStartDate.title")), backLink = Some(call.url)) {
 
     @formHelper(action = routes.PlanStartDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
