changes as per prototype

--- a/app/views/YourDirectDebitInstructionsView.scala.html
+++ b/app/views/YourDirectDebitInstructionsView.scala.html
@@ -14,10 +14,8 @@
  * limitations under the License.
  *@
 
-@import views.html.components._
-@import utils.MaskAndFormatUtils._
-@import utils.Utils.emptyString
-@import uk.gov.hmrc.govukfrontend.views.html.components._
+@import views.html.components.*
+@import utils.MaskAndFormatUtils.*
 
 @this(
     layout: templates.Layout,
