--- a/app/views/components/Header1.scala.html
+++ b/app/views/components/Header1.scala.html
@@ -20,7 +20,7 @@
 
 @(
   msg: String,
-  classes: String = "govuk-heading-l",
+  classes: String = "govuk-heading-xl",
   id: Option[String] = None
 )(implicit messages: Messages)
 
