DTR-134: Change links ammended to 3 links and added the border

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,12 +29,12 @@
 
 @media (min-width: 40.0625em) {
 .govuk-summary-list__key {
-    width: 35%;
+    width: 50%;
  }
 }
 
 .govuk-summary-list__row {
-  border-bottom:none;
+  border-bottom: 1px solid #bfc1c3;
 }
 
 .extra-line-spacing {
