--- a/app/views/BankApprovalView.scala.html
+++ b/app/views/BankApprovalView.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @import config.FrontendAppConfig
-@import views.html.components._
+@import views.html.components.*
 
 @this(
         layout: templates.Layout,
@@ -28,15 +28,13 @@
 @(payingHmrcUrl: String)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleNoForm(messages("bankApproval.title")), showSignOut = false, showBackLink = false) {
-
-    <h1 class="govuk-heading-xl">@messages("bankApproval.heading")</h1>
-         @header1("bankApproval.heading")
-         @paragraph("bankApproval.p1")
-         @paragraphMessageWithLink(
+     @header1("bankApproval.heading")
+     @paragraph("bankApproval.p1")
+     @paragraphMessageWithLink(
          Some(messages("bankApproval.p2")),
          linkMessage = messages("bankApproval.p2.link"),
          linkUrl = payingHmrcUrl,
          linkFullStop = false,
          message2 = Some(messages("bankApproval.p2.link.after"))
-         )
+     )
 }
