--- a/app/views/BankDetailsCheckYourAnswerView.scala.html
+++ b/app/views/BankDetailsCheckYourAnswerView.scala.html
@@ -14,16 +14,14 @@
  * limitations under the License.
  *@
 
-@import views.html.components._
+@import views.html.components.*
 
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
-    govukErrorSummary: GovukErrorSummary,
     govukSummaryList: GovukSummaryList,
-    govukRadios: GovukRadios,
     govukButton: GovukButton,
-    header1:Header1,
+    h1:Header1,
     h2:Header2,
     linkWithHiddenText: LinkWithHiddenText
 )
@@ -31,42 +29,16 @@
 @(form: Form[_], mode: Mode, list: SummaryList, call: Call)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("bankDetailsCheckYourAnswer.title")), backLink = Some(call.url)) {
-    @formHelper(action = routes.BankDetailsCheckYourAnswerController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
-        @if(form.errors.nonEmpty) {
-            @govukErrorSummary(ErrorSummaryViewModel(form))
-        }
+    @h1("bankDetailsCheckYourAnswer.heading")
+    @h2("bankDetailsCheckYourAnswer.h2")
 
-        @header1("bankDetailsCheckYourAnswer.heading")
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-two-thirds">
-                @h2("bankDetailsCheckYourAnswer.h2")
-            </div>
-            <div class="govuk-grid-column-one-third">
-                @linkWithHiddenText(
-                    url = routes.YourBankDetailsController.onPageLoad(CheckMode).url,
-                    text = "Change",
-                    visuallyHiddenText = Some("bankDetailsCheckYourAnswer.h2")
-                    )
-            </div>
-        </div>
+    @govukSummaryList(list)
 
-        @govukSummaryList(list)
+    @govukButton(Button(
+        href = Some(routes.DirectDebitSourceController.onPageLoad(NormalMode).url),
+        content = Text(messages("site.continue")),
+        attributes = Map("id" -> "continue-button")
+    ))
 
-        @govukRadios(
-            RadiosViewModel.yesNo(
-                field = form("value"),
-                legend = LegendViewModel(messages("bankDetailsCheckYourAnswer.p1"))
-                .copy(classes = "govuk-!-padding-bottom-3")
-                ).withHint(
-                Hint(
-                content = Messages("bankDetailsCheckYourAnswer.hint")
-                ).copy(classes = "govuk-!-padding-bottom-3")
-            )
-        )
-
-        @govukButton(
-            ButtonViewModel(messages("site.continue"))
-        )
-    }
 }
