DTR-133: SortCode and AccountNumber  accepts digits only on the input field

--- a/app/views/YourBankDetailsView.scala.html
+++ b/app/views/YourBankDetailsView.scala.html
@@ -51,6 +51,8 @@
                 label = LabelViewModel(messages("yourBankDetails.sortCode"))
             )
             .withWidth(Fixed5)
+            .withInputType("number")
+            .withPattern("[0-9]*")
             .withHint(Hint(content = Text(messages("yourBankDetails.sortCode.hint"))))
         )
 
@@ -60,6 +62,8 @@
                 label = LabelViewModel(messages("yourBankDetails.accountNumber"))
             )
             .withWidth(Fixed10)
+            .withInputType("number")
+            .withPattern("[0-9]*")
             .withHint(Hint(content = Text(messages("yourBankDetails.accountNumber.hint"))))
         )
 
